# blockchain-fpga-api

./: .gitignore  README.md  mock_test.sh  pyproject.toml
src/: app.py  main.py  mock_test.py
src/core/: __init__.py  block.py  blockchain.py  pow.py  transaction.py
src/fpga_interface/: __init__.py  serial_fpga_interface.py
src/test/: __init__.py  demo_simple_majority.py  mock_node.py  static_node.py
src/test_nodes/: __init__.py  static_node.py
